--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container text-center">
             <a id="btnAction" class="btn" href="http://majesticeducationdigital.com/e-book/e-book-student/">
-                <i class="fa fa-book"></i><br>Libro interactivo
+                <i class="fa fa-book"></i><br>Demo <br>interactive book
             </a>
         </div>
         <footer>
