--- a/index.html
+++ b/index.html
@@ -14,10 +14,25 @@
             </a>
         </div>
         <div class="container text-center">
+            <div class="row">
+                <div class="col-md-6">
+                    <a id="btnAction" class="btn" href="http://majesticeducationdigital.com/e-book/e-book-student/">
+                        <i class="fa fa-book"></i><br>English Aware<br>1
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <a id="btnAction" class="btn" href="http://majesticeducationdigital.com/e-book/take-up-1/">
+                        <i class="fa fa-book"></i><br>Take Up English<br>1
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="container text-center">
             <a id="btnAction" class="btn" href="http://majesticeducationdigital.com/e-book/e-book-student/">
                 <i class="fa fa-book"></i><br>Demo <br>interactive book
             </a>
-        </div>
+        </div> -->
         <footer>
             <p>Derechos Reservados © <a id="linkA" href="https://majesticeducacion.com.mx/">Majestic Education</a>.</p>
         </footer>
